Finish refactoring tag exceptions